@@ -1,6 +1,7 @@
 User johns
 Date:
 
+    Experimental ac3 audio drift correction support.
     Removes LPCM detection from TS parser.
     Rewrote video/audio start code.
     Add support for attach/detach plugin.
